# epub-metadata

./: .gitignore  LICENSE  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: workflow.yaml
docs/source/: conf.py  epub.rst  index.rst
epub_metadata/: epub.py  opf_parser.py
tests/: epub_metadata_test.py
