[tool.poetry]
name = "embyepubmetadataplugin"
version = "0.1.0"
description = ""
authors = ["ThanatosDi <yykkold55tw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
arrow = "^1.2.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
